2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: get rid of extraneous warnings
	* acinclude.m4: correct version numbers
	* strss7.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strss7.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/libxnet.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/strss7.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-21  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: strapped out mtp.c for now
	* src/include/ss7/mtpi_ioctl.h: updating mtp.c driver
	* src/include/sys/xti_mtp.h: updating mtp.c driver
	* src/modules/mtp/mtp.c: updating mtp.c driver

2007-02-17  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: added mtp.c
	* stacks/src/include/ss7/mtpi_ioctl.h: timer corrections
	* stacks/src/modules/mtp/mtp.c: first clean recompile on LFS

	* doc/man/man7/mtp_npi.7.man: removed
	* doc/man/man7/mtp_tpi.7.man: removed

	* doc/man/Makefile.am: roughed in docs
	* doc/man/man4/mtp_npi.4.man: roughed in docs
	* doc/man/man7/npi_mtp.7.man: roughed in docs
	* doc/man/man7/tpi_mtp.7.man: roughed in docs
	* src/include/ss7/mtpi_ioctl.h: corrections
	* src/modules/mtp/mtp.c: working up MTP
	* src/modules/mtp/mtp_min.c: working up MTP-min