@@ -1,5 +1,6 @@
 2007-03-05  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/manual/Makefile.am: try to correct libxnet inclusion
 	* acinclude.m4: get rid of extraneous warnings
 	* acinclude.m4: correct version numbers
 	* strss7.spec.in: do not release source package
